# zeromq-cookbook

./: .gitignore  CMakeLists.txt  README.md
Chapter00/: CMakeLists.txt
Chapter00/HelloWorld/: CMakeLists.txt  main.cpp
Chapter01/: CMakeLists.txt
Chapter01/hello/client/: client.cpp
Chapter01/hello/server/: server.cpp
Chapter01/parallel/sink/: CMakeLists.txt  taskventilator.cpp
Chapter01/parallel/ventilator/: server.cpp
Chapter01/parallel/worker/: CMakeLists.txt  client.cpp
Chapter01/wheather_update/client/: client.cpp
Chapter01/wheather_update/server/: CMakeLists.txt  server.cpp
cmake-template/: CMakeLists.txt  README.md
cmake-template/client/: CMakeLists.txt  Client.cc  Client.hh  main.cc
cmake-template/server/: CMakeLists.txt  Server.cc  Server.hh  main.cc
cmake-template/test/: CMakeLists.txt  Test.cc  Test.hh  main.cc
hello-cppzmq/: CMakeLists.txt  hello.cc  world.cc
include/: zhelpers.h
