

#//////////////////////////////////////  < BEGIN >  ///////////////////////////////////////


# Require a minimum version of cmake.
cmake_minimum_required( VERSION 3.20.0 )


#----------------------------------------
#       1. Sub-Project
#----------------------------------------

# add HelloWorld
set( PROJECT_FOLDER_NAME HelloWorld )
add_subdirectory( ${PROJECT_FOLDER_NAME} )


#//////////////////////////////////////  <  END  >  ///////////////////////////////////////

