

#//////////////////////////////////////  < BEGIN >  ///////////////////////////////////////


#----------------------------------------
#       projects of Chapter-00
#----------------------------------------

# add HelloWorld
set( PROJECT_FOLDER_NAME HelloWorld )
add_subdirectory( ${PROJECT_FOLDER_NAME} )


#//////////////////////////////////////  <  END  >  ///////////////////////////////////////

