

#//////////////////////////////////////  < BEGIN >  ///////////////////////////////////////


#----------------------------------------
#       projects of Chapter-01
#----------------------------------------

# for Hello - client
set( PROJECT_FOLDER_NAME hello/client )
add_subdirectory( ${PROJECT_FOLDER_NAME} )
# for Hello - server
set( PROJECT_FOLDER_NAME hello/server )
add_subdirectory( ${PROJECT_FOLDER_NAME} )


#//////////////////////////////////////  <  END  >  ///////////////////////////////////////

