

#//////////////////////////////////////  < BEGIN >  ///////////////////////////////////////


#----------------------------------------
#       projects of Chapter-01
#----------------------------------------

# for wheather_update - client
set( PROJECT_FOLDER_NAME wheather_update/client )
add_subdirectory( ${PROJECT_FOLDER_NAME} )
# for wheather_update - server
set( PROJECT_FOLDER_NAME wheather_update/server )
add_subdirectory( ${PROJECT_FOLDER_NAME} )


#//////////////////////////////////////  <  END  >  ///////////////////////////////////////

